--- a/example.html
+++ b/example.html
@@ -14,5 +14,8 @@
             <li>Third</li>
         </ol>
     </div>
+    <script>
+        vegaEmbed("#viz", "mySpec.json");
+    </script>
 </body>
 </html>
