--- a/example.html
+++ b/example.html
@@ -20,5 +20,7 @@
     <script>
         vegaEmbed("#viz", "mySpec.json");
     </script>
+    <!-- https://www.jsdelivr.com/package/npm/vega-lite 
+     cntrl shift p open the palette -->
 </body>
 </html>
